Closed Bug 292556 Opened 21 years ago Closed 21 years ago

JS_NewRuntime doesn't handle failure from js_SetupLocks

Categories

(Core :: JavaScript Engine, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

References

()

Details

Attachments

(1 obsolete file)

JSBool js_SetupLocks(int listc, int globc) (standard jsapi style, returns false on failure) original blame for code is lost (it's attributed to fur, but he just landed it)
Original blame is probably Bajoran; I'll patch tonight.
Assignee: general → shaver
Status: UNCONFIRMED → NEW
Ever confirmed: true
Attached patch is this not sufficient? (obsolete) — — Splinter Review
Attachment #182625 - Flags: review?(shaver)
Flags: testcase-
Comment on attachment 182625 [details] [diff] [review] is this not sufficient? r+a=shaver
Attachment #182625 - Flags: review?(shaver)
Attachment #182625 - Flags: review+
Attachment #182625 - Flags: approval1.8b2+
Comment on attachment 182625 [details] [diff] [review] is this not sufficient? mozilla/js/src/jsapi.c 3.196
Attachment #182625 - Attachment is obsolete: true
Assignee: shaver → timeless
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: