Bug 292556 JS_NewRuntime doesn't handle failure from js_SetupLocks r=shaver a=shaver